# qa_guru_8_19_homework

./: pyproject.toml
tests/: test_different_routs.py  test_positive_negative.py  test_response.py  test_schemas.py  test_status_codes.py  utils.py
