[tool.poetry]
name = "qa_guru_8_19_homework"
version = "0.1.0"
description = ""
authors = ["aistabk <elizavetasoom@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
requests = "^2.31.0"
jsonschema = "^4.20.0"
utils = "^1.0.1"
selene = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
